Fix prewrap

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -38,7 +38,7 @@
 .article > header div {
   position: relative;
   z-index: 5;
-  max-width: 1080px;
+  max-width: 880px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -158,6 +158,7 @@
   max-width: 740px;
   margin: 0 auto;
   padding: 15px 20px;
+  white-space: pre-wrap;
 }
 
 .article > article ul {
